fix(pink-bar): text on very small displays not visible

--- a/src/css/banner-center.less
+++ b/src/css/banner-center.less
@@ -44,15 +44,20 @@
     width: 57%;
 }
 
-#dothiv-cb-status-left {
-    display: block;
+#dothiv-cb-status-left, #dothiv-cb-status-right {
+
+    font-style: normal;
+  line-height: 36px;
 }
 
 #dothiv-cb-status-right {
-    font-style: normal;
-    line-height: 36px;
     padding-left: 20px;
-    display: inline-block;
+  display: inline-block;
+}
+
+#dothiv-cb-status-left {
+  display: block;
+  padding-right: 20px;
 }
 
 #dothiv-cb-statusbar {
@@ -166,7 +171,9 @@
   }
 }
 
-@media screen and (max-width: 720px) {
+// Tablets.
+/*
+@media screen and (max-width: 719px) {
   #dothiv-cb-content {
     width: 100%;
   }
@@ -195,4 +202,42 @@
   #dothiv-cb-links {
     display: none;
   }
+}
+*/
+
+// Smartphones.
+@media screen and (max-width: 479px) {
+  #dothiv-cb-content {
+    width: 100%;
+  }
+
+  #dothiv-cb-left {
+    width: 100%;
+  }
+
+  #dothiv-cb-h1 {
+    font-size: 30px;
+  }
+
+  #dothiv-cb-left-span {
+    font-size: 12px;
+  }
+
+  #dothiv-cb-status-right, #dothiv-cb-status-left {
+    font-size: 12px;
+    line-height: 18px;
+    span {
+      display: block;
+    }
+  }
+
+  #dothiv-cb-right {
+    width: 100%;
+    position: relative;
+  }
+
+  #dothiv-cb-links {
+    display: none;
+  }
+
 }
